alignment fixed

--- a/css/mining-truth.css
+++ b/css/mining-truth.css
@@ -197,11 +197,12 @@ text-align: center;
 
 .container {
   max-width: 940px;
-
+  margin-left: -15px;
+  margin-right: auto;
 }
 
 body {
- max-width: 940px;
+ max-width: 910px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 0;
